[package]
name = "micronos" #Time-hold?
version = "0.2.0"
authors = ["Alejandro R. Buteler <alebuteler@gmail.com>"]
edition = "2021"
rust-version = "1.79.0"


[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
time = { version = "0.3.34", features = ["local-offset"] }
# for app persistence:
serde = { version = "1", features = ["derive"] }


# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in release mode at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Significantly slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slightly slows compile times, marginal improvements.
lto = "thin"
